--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>My first Bulma website</title>
+    <title>Sakul6499 | Lukas Weber</title>
     <link rel="stylesheet" href="css/main.css" />
   </head>
   <body>
     <section class="hero is-dark is-fullheight">
       <a href="">
-        <h2>Blog</h2>
+        <h2>Blog BUTTON GOES HERE ... OR ON THE RIGHT ...</h2>
         <img src="icons/blog.svg" alt="Blog" />
       </a>
       <canvas id="wire-frame"></canvas>
@@ -35,7 +35,7 @@
               <img src="icons/stackoverflow.svg" alt="StackOverflow" />
             </a>
             <a class="is-icon" href="">
-              <img src="icons/keybase.svg" alt="KeyBase" />
+              <img src="icons/keybase.svg" alt="Keybase" />
             </a>
             <a class="is-icon" href="">
               <img src="icons/mail.svg" alt="Mail" />
@@ -69,6 +69,18 @@
       </div>
     </section>
     <section class="section" id="about-me">
+      <div class="container">
+      <div class="is-6">
+          <p>CONTENT GOES HERE</p>
+          <p>Should be left</p>
+      </div>
+      <div class="is-6">
+          <p>CONTENT GOES HERE</p>
+          <p>Should be right</p>
+      </div>
+    </div>
+    </section>
+    <section class="section" id="info-tiles">
       <div class="tile is-ancestor">
         <div class="tile is-vertical is-8">
           <div class="tile is-parent">
@@ -84,35 +96,52 @@
                 <a class="is-icon-small" href="">
                   <img src="icons/bitbucket.svg" alt="BitBucket" />
                 </a>
+                <a class="is-icon-small" href="">
+                    <img src="icons/blog.svg" alt="Blog" />
+                  </a>
               </div>
               <div class="content">
-                Most of my projects are available on <a href="">GitLab</a>, however occasionally I also make use of <a href="">GitHub</a>.
-                A few years back, I primarily used <a href="">BitBucket</a> though <a href="">GitLab</a> actually offered way more features so I switched over.
-                However, this doesn't mean that everything is on <a href="">GitLab</a> yet!
-                In fact, many old(er) projects are still on <a href="">BitBucket</a> and are waiting to be cleaned-up and transfered to <a href="">GitLab</a>.
-                That said, I don't really use <a href="">GitHub</a> that much.
+                Most of my projects are available on <a href="">GitLab</a>.
+                However, occasionally I also make use of <a href="">GitHub</a>. 
+                A few years back, I primarily used <a href="">BitBucket</a> though
+                <a href="">GitLab</a> actually offered way more features so I switched over. 
+                That does not mean that everything is on <a href="">GitLab</a> yet! 
+                In fact, many old(er) projects are still on <a href="">BitBucket</a> and are waiting to be cleaned-up and transferred to <a href="">GitLab</a>. 
+                That said, I don't really use <a href="">GitHub</a> that much. 
                 I primarily only follow interesting people, groups and projects there.
+                <br /><br />
+                If you are interested in any of my work I definitely suggest checking out my <a href="">GitLab</a> profile and of course my <a href="">Blog</a>!
               </div>
             </article>
           </div>
           <div class="tile">
-            <div class="tile is-parent is-vertical">
-              <article class="tile is-child notification is-primary">
-                <p class="title">Vertical...</p>
-                <p class="subtitle">Top tile</p>
-              </article>
-              <article class="tile is-child notification is-warning">
-                <p class="title">...tiles</p>
-                <p class="subtitle">Bottom tile</p>
-              </article>
-            </div>
             <div class="tile is-parent">
               <article class="tile is-child notification is-info">
-                <p class="title">Middle tile</p>
-                <p class="subtitle">With an image</p>
-                <figure class="image is-4by3">
-                  <img src="https://bulma.io/images/placeholders/640x480.png" />
-                </figure>
+                <div class="content">
+                <p class="title">Contact me</p>
+                <div class="subtitle no-font">
+                    <a class="is-icon-small" href="">
+                      <img src="icons/telegram.svg" alt="Telegram" />
+                    </a>
+                    <a class="is-icon-small" href="">
+                      <img src="icons/discord.svg" alt="Discord" />
+                    </a>
+                    <a class="is-icon-small" href="">
+                        <img src="icons/keybase.svg" alt="Keybase" />
+                      </a>
+                    <a class="is-icon-small" href="">
+                      <img src="icons/mail.svg" alt="Mail" />
+                    </a>
+                  </div>
+                  <div class="content">
+                    Apart from all the social medias, I am also available on <a href="">Telegram</a>, <a href="">Discord</a>, <a href="">Keybase</a> and of course via <a href="">Mail</a>!
+                    <br /><br />
+                    However, I generally like my chats encrypted, thus I naturally prefer <a href="">Telegram</a> for its simple and somewhat secure approach, <a href="">Keybase</a> for the easy and very good encryption and <a href="">Encrypted Mail</a> for the experts!
+                    <br /><br />
+                    Feel free to contact me anywhere.<br/>
+                    However, please state from where you come and why you are contacting me so I don't sort it out as spam immediately.
+                  </div>
+              </div>
               </article>
             </div>
           </div>
@@ -120,100 +149,48 @@
         <div class="tile is-parent">
           <article class="tile is-child notification is-success">
             <div class="content">
-              <p class="title">Tall tile</p>
-              <p class="subtitle">With even more content</p>
+              <p class="title">Social Media</p>
+              <div class="subtitle no-font">
+                <a class="is-icon-small" href="">
+                  <img src="icons/twitter.svg" alt="Twitter" />
+                </a>
+                <a class="is-icon-small" href="">
+                  <img src="icons/mastodon.svg" alt="Mastodon" />
+                </a>
+                <a class="is-icon-small" href="">
+                  <img src="icons/keybase.svg" alt="Keybase" />
+                </a>
+                <a class="is-icon-small" href="">
+                  <img src="icons/stackoverflow.svg" alt="StackOverflow" />
+                </a>
+                <a class="is-icon-small" href="">
+                  <img src="icons/linkedin.svg" alt="LinkedIn" />
+                </a>
+                <a class="is-icon-small" href="">
+                  <img src="icons/xing.svg" alt="Xing" />
+                </a>
+              </div>
               <div class="content">
-                <!-- Content -->
+                Of course I am on social media! However, I use
+                <a href="">Twitter</a> and <a href="">Mastodon</a> primarily
+                privately. <br />
+                Meaning, very little or no work at all, private conversations
+                and sometimes even a tiny little safe-zone.
+                <br /><br />
+                Furthermore, I am on <a href="">Keybase</a>!
+                If you don't know what <a href="">Keybase</a> is:<br/>
+                It's a social platform based on privacy and identity.
+                You can even use your GPG/PGP key there and store encrypted files and git repositories!
+                <br /><br />
+                Apart from the above, I am also to be found on <a href="">LinkedIn</a>, <a href="">Xing</a> and, of
+                course, <a href="">StackOverflow</a>! Those are obviously
+                work-oriented, although I am currently not that active on there.
+                Might change in the future though.
+                <br /><br />
+                Feel free to follow and contact me anywhere.
               </div>
             </div>
           </article>
-        </div>
-      </div>
-      <div class="container">
-        <div class="columns">
-          <div class="column is-8-desktop is-offset-2-desktop">
-            <div class="content">
-              <h3>What's included</h3>
-              <p>
-                The <code>npm</code> dependencies included in
-                <code>package.json</code> are:
-              </p>
-              <ul>
-                <li>
-                  <code
-                    ><a href="https://github.com/jgthms/bulma">bulma</a></code
-                  >
-                </li>
-                <li>
-                  <code
-                    ><a href="https://github.com/sass/node-sass"
-                      >node-sass</a
-                    ></code
-                  >
-                  to compile your own Sass file
-                </li>
-                <li>
-                  <code
-                    ><a href="https://github.com/postcss/postcss-cli"
-                      >postcss-cli</a
-                    ></code
-                  >
-                  and
-                  <code
-                    ><a href="https://github.com/postcss/autoprefixer"
-                      >autoprefixer</a
-                    ></code
-                  >
-                  to add support for older browsers
-                </li>
-                <li>
-                  <code
-                    ><a href="https://babeljs.io/docs/usage/cli/"
-                      >babel-cli</a
-                    ></code
-                  >,
-                  <code
-                    ><a href="https://github.com/babel/babel-preset-env"
-                      >babel-preset-env</a
-                    ></code
-                  >
-                  and
-                  <code
-                    ><a
-                      href="https://github.com/jmcriffey/babel-preset-es2015-ie"
-                      >babel-preset-es2015-ie</a
-                    ></code
-                  >
-                  for compiling ES6 JavaScript files
-                </li>
-              </ul>
-              <p>
-                Apart from <code>package.json</code>, the following files are
-                included:
-              </p>
-              <ul>
-                <li>
-                  <code>.babelrc</code> configuration file for
-                  <a href="https://babeljs.io/">Babel</a>
-                </li>
-                <li>
-                  <code>.gitignore</code> common
-                  <a href="https://git-scm.com/">Git</a> ignored files
-                </li>
-                <li><code>index.html</code> this HTML5 file</li>
-                <li>
-                  <code>_sass/main.scss</code> a basic SCSS file that
-                  <strong>imports Bulma</strong> and explains how to
-                  <strong>customize</strong> your styles, and compiles to
-                  <code>css/main.css</code>
-                </li>
-                <li>
-                  <code>_javascript/main.js</code> an ES6 JavaScript that
-                  compiles to <code>lib/main.js</code>
-                </li>
-              </ul>
-            </div>
-          </div>
         </div>
       </div>
     </section>
@@ -224,9 +201,6 @@
             <p>
               <strong class="has-text-weight-semibold">
                 <a href="/credits.html">Credits</a>
-                <a href="https://www.npmjs.com/package/bulma-start"
-                  >bulma-start@0.0.3</a
-                >
               </strong>
             </p>
             <p>
