--- a/index.html
+++ b/index.html
@@ -70,18 +70,18 @@
     </section>
     <section class="section" id="about-me">
       <div class="container">
-      <div class="is-6">
+        <div class="is-6">
           <p>CONTENT GOES HERE</p>
           <p>Should be left</p>
-      </div>
-      <div class="is-6">
+        </div>
+        <div class="is-6">
           <p>CONTENT GOES HERE</p>
           <p>Should be right</p>
+        </div>
       </div>
-    </div>
     </section>
     <section class="section" id="info-tiles">
-      <div class="tile is-ancestor">
+      <div class="tile is-ancestor" id="projects">
         <div class="tile is-vertical is-8">
           <div class="tile is-parent">
             <article class="tile is-child notification is-danger">
@@ -97,29 +97,33 @@
                   <img src="icons/bitbucket.svg" alt="BitBucket" />
                 </a>
                 <a class="is-icon-small" href="">
-                    <img src="icons/blog.svg" alt="Blog" />
-                  </a>
+                  <img src="icons/blog.svg" alt="Blog" />
+                </a>
               </div>
               <div class="content">
                 Most of my projects are available on <a href="">GitLab</a>.
-                However, occasionally I also make use of <a href="">GitHub</a>. 
-                A few years back, I primarily used <a href="">BitBucket</a> though
-                <a href="">GitLab</a> actually offered way more features so I switched over. 
-                That does not mean that everything is on <a href="">GitLab</a> yet! 
-                In fact, many old(er) projects are still on <a href="">BitBucket</a> and are waiting to be cleaned-up and transferred to <a href="">GitLab</a>. 
-                That said, I don't really use <a href="">GitHub</a> that much. 
-                I primarily only follow interesting people, groups and projects there.
-                <br /><br />
-                If you are interested in any of my work I definitely suggest checking out my <a href="">GitLab</a> profile and of course my <a href="">Blog</a>!
+                However, occasionally I also make use of <a href="">GitHub</a>.
+                A few years back, I primarily used
+                <a href="">BitBucket</a> though <a href="">GitLab</a> actually
+                offered way more features so I switched over. That does not mean
+                that everything is on <a href="">GitLab</a> yet! In fact, many
+                old(er) projects are still on <a href="">BitBucket</a> and are
+                waiting to be cleaned-up and transferred to
+                <a href="">GitLab</a>. That said, I don't really use
+                <a href="">GitHub</a> that much. I primarily only follow
+                interesting people, groups and projects there. <br /><br />
+                If you are interested in any of my work I definitely suggest
+                checking out my <a href="">GitLab</a> profile and of course my
+                <a href="">Blog</a>!
               </div>
             </article>
           </div>
-          <div class="tile">
+          <div class="tile" id="contact-me">
             <div class="tile is-parent">
               <article class="tile is-child notification is-info">
                 <div class="content">
-                <p class="title">Contact me</p>
-                <div class="subtitle no-font">
+                  <p class="title">Contact me</p>
+                  <div class="subtitle no-font">
                     <a class="is-icon-small" href="">
                       <img src="icons/telegram.svg" alt="Telegram" />
                     </a>
@@ -127,26 +131,33 @@
                       <img src="icons/discord.svg" alt="Discord" />
                     </a>
                     <a class="is-icon-small" href="">
-                        <img src="icons/keybase.svg" alt="Keybase" />
-                      </a>
+                      <img src="icons/keybase.svg" alt="Keybase" />
+                    </a>
                     <a class="is-icon-small" href="">
                       <img src="icons/mail.svg" alt="Mail" />
                     </a>
                   </div>
                   <div class="content">
-                    Apart from all the social medias, I am also available on <a href="">Telegram</a>, <a href="">Discord</a>, <a href="">Keybase</a> and of course via <a href="">Mail</a>!
-                    <br /><br />
-                    However, I generally like my chats encrypted, thus I naturally prefer <a href="">Telegram</a> for its simple and somewhat secure approach, <a href="">Keybase</a> for the easy and very good encryption and <a href="">Encrypted Mail</a> for the experts!
-                    <br /><br />
-                    Feel free to contact me anywhere.<br/>
-                    However, please state from where you come and why you are contacting me so I don't sort it out as spam immediately.
+                    Apart from all the
+                    <a href="/#social-media">social medias</a>, I am also
+                    available on <a href="">Telegram</a>,
+                    <a href="">Discord</a>, <a href="">Keybase</a> and of course
+                    via <a href="">Mail</a>! <br /><br />
+                    However, I generally like my chats encrypted, thus I
+                    naturally prefer <a href="">Telegram</a> for its simple and
+                    somewhat secure approach, <a href="">Keybase</a> for the
+                    easy and very good encryption and
+                    <a href="">Encrypted Mail</a> for the experts! <br /><br />
+                    Feel free to contact me anywhere.<br />
+                    However, please state from where you come and why you are
+                    contacting me so I don't sort it out as spam immediately.
                   </div>
-              </div>
+                </div>
               </article>
             </div>
           </div>
         </div>
-        <div class="tile is-parent">
+        <div class="tile is-parent" id="social-media">
           <article class="tile is-child notification is-success">
             <div class="content">
               <p class="title">Social Media</p>
@@ -177,16 +188,17 @@
                 Meaning, very little or no work at all, private conversations
                 and sometimes even a tiny little safe-zone.
                 <br /><br />
-                Furthermore, I am on <a href="">Keybase</a>!
-                If you don't know what <a href="">Keybase</a> is:<br/>
-                It's a social platform based on privacy and identity.
-                You can even use your GPG/PGP key there and store encrypted files and git repositories!
+                Furthermore, I am on <a href="">Keybase</a>! If you don't know
+                what <a href="">Keybase</a> is:<br />
+                It's a social platform based on privacy and identity. You can
+                even use your GPG/PGP key there and store encrypted files and
+                git repositories!
                 <br /><br />
-                Apart from the above, I am also to be found on <a href="">LinkedIn</a>, <a href="">Xing</a> and, of
-                course, <a href="">StackOverflow</a>! Those are obviously
-                work-oriented, although I am currently not that active on there.
-                Might change in the future though.
-                <br /><br />
+                Apart from the above, I am also to be found on
+                <a href="">LinkedIn</a>, <a href="">Xing</a> and, of course,
+                <a href="">StackOverflow</a>! Those are obviously work-oriented,
+                although I am currently not that active on there. Might change
+                in the future though. <br /><br />
                 Feel free to follow and contact me anywhere.
               </div>
             </div>
