--- a/disclaimer_legal_and_privacy.html
+++ b/disclaimer_legal_and_privacy.html
@@ -60,7 +60,7 @@
                 <br /><br />
 
                 <div class="is-size-5 is-family-code">Liability for copyright</div>
-                Contents, data and information published on this website are subjected to the german copyright laws.<br/>
+                Content, data and information published on this website are subjected to the german copyright laws.<br/>
                 Reproduction, editing, distributing as well as the use of any other use outside the copyright law are strictly forbidden and require a written permission of the author.
                 <br/><br/>
                 This excludes links to this website (e.g. sharing of an article with another audience), using articles as references (e.g. for your own projects) or other creative uses.
