Made changing-policy more clear

--- a/disclaimer_legal_and_privacy.html
+++ b/disclaimer_legal_and_privacy.html
@@ -69,7 +69,7 @@
                 <ul>
                     <li>Request permission to use or reference my content (if not stated differently above)</li>
                     <li>Inform me (e.g. via e-email, see <a href="/#contact-me">contact me</a>) that you are using or referencing my content in any way</li>
-                    <li>Inform me about potential changes (e.g. you made an article or a video about or referencing my work and you change it)</li>
+                    <li>Inform me about potential changes (e.g. you made an article or a video about or referencing my work and you are planning to change it or changed it already)</li>
                     <li>Credit the owner and reference it visibly</li>
                 </ul>
                 <b>Single posts from my blog may exclude and differ from this if stated differently there.</b>
