--- a/credits.html
+++ b/credits.html
@@ -22,6 +22,23 @@
     </section>
     <div class="tile is-parent">
       <div class="tile is-parent is-4">
+        <h1>Font-Awesome</h1>
+        <table>
+          <tr>
+            <td>Name</td>
+            <td>Icon</td>
+            <td>Link</td>
+            <td>License</td>
+            <td>Modified</td>
+          </tr>
+          <tr>
+            <td>Home</td>
+            <td><img src="icons/home.svg" alt="Home"/></td>
+            <td><a href="https://fontawesome.com/icons/home?style=solid">Font-Awesome</a></td>
+            <td><a href="https://fontawesome.com/license">License</a></td>
+            <td>&#9745;</td>
+          </tr>
+        </table>
         <article class="tile is-child notification is-danger">
           <h1 class="title">Title</h1>
           <p class="subtitle">SubTitle</p>
