--- a/index.html
+++ b/index.html
@@ -8,11 +8,8 @@
     <link rel="stylesheet" href="css/main.css" />
   </head>
   <body>
+    <embed class="nav" src="header.html">
     <section class="hero is-dark is-fullheight">
-      <a href="">
-        <h2>Blog BUTTON GOES HERE ... OR ON THE RIGHT ...</h2>
-        <img src="icons/blog.svg" alt="Blog" />
-      </a>
       <canvas id="wire-frame"></canvas>
       <div class="hero-body">
         <div class="container has-text-centered" id="start-frame">
@@ -206,35 +203,7 @@
         </div>
       </div>
     </section>
-    <footer class="footer has-text-centered">
-      <div class="container">
-        <div class="columns">
-          <div class="column is-8-desktop is-offset-2-desktop">
-            <p>
-              <strong class="has-text-weight-semibold">
-                <a href="/credits.html">Credits</a>
-              </strong>
-            </p>
-            <p>
-              <small>
-                Source code licensed
-                <a href="http://opensource.org/licenses/mit-license.php">MIT</a>
-              </small>
-            </p>
-            <p style="margin-top: 1rem;">
-              <a href="http://bulma.io">
-                <img
-                  src="made-with-bulma.png"
-                  alt="Made with Bulma"
-                  width="128"
-                  height="24"
-                />
-              </a>
-            </p>
-          </div>
-        </div>
-      </div>
-    </footer>
+    <embed src="footer.html">
     <script type="text/javascript" src="lib/dots.js"></script>
   </body>
 </html>
