--- a/disclaimer_legal_and_privacy.html
+++ b/disclaimer_legal_and_privacy.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/main.css" />
   </head>
   <body>
+      <embed class="nav" src="header.html">
     <section class="hero is-medium is-light is-bold">
       <div class="hero-body">
         <div class="container">
