--- a/footer.html
+++ b/footer.html
@@ -18,6 +18,11 @@
               </strong>
             </p>
             <p>
+                <strong class="has-text-weight-semibold">
+                  <a href="/disclaimer_legal_and_privacy.html">Disclaimer, legal and privacy</a>
+                </strong>
+              </p>
+            <p>
               <small>
                 Source code licensed
                 <a href="http://opensource.org/licenses/mit-license.php">MIT</a>
