--- a/index.html
+++ b/index.html
@@ -25,40 +25,43 @@
             | Student |
           </h2>
           <div id="social-images">
-            <a class="is-icon" href="">
+            <a class="is-icon" href="https://www.linkedin.com/in/lukas-weber-b1a25515a">
               <img src="icons/linkedin.svg" alt="LinkedIn" />
             </a>
-            <a class="is-icon" href="">
+            <a class="is-icon" href="https://www.xing.com/profile/Lukas_Weber165">
+              <img src="icons/xing.svg" alt="Xing" />
+            </a>
+            <a class="is-icon" href="https://stackoverflow.com/users/5326353/sakul6499">
               <img src="icons/stackoverflow.svg" alt="StackOverflow" />
             </a>
-            <a class="is-icon" href="">
+            <a class="is-icon" href="https://keybase.io/sakul6499">
               <img src="icons/keybase.svg" alt="Keybase" />
             </a>
-            <a class="is-icon" href="">
+            <a class="is-icon" href="mailto:me@sakul6499.de">
               <img src="icons/mail.svg" alt="Mail" />
             </a>
-            <a class="is-icon" href="">
+            <a class="is-icon" href="https://github.com/Sakul6499">
               <img src="icons/github.svg" alt="GitHub" />
             </a>
-            <a class="is-icon" href="">
+            <a class="is-icon" href="https://gitlab.com/Sakul6499">
               <img src="icons/gitlab.svg" alt="GitLab" />
             </a>
-            <a class="is-icon" href="">
+            <a class="is-icon" href="https://bitbucket.org/%7Be556a531-5d5f-4ab9-a76d-bfc3043af83f%7D/">
               <img src="icons/bitbucket.svg" alt="BitBucket" />
             </a>
-            <a class="is-icon" href="">
+            <a class="is-icon" href="https://t.me/sakul6499">
               <img src="icons/telegram.svg" alt="Telegram" />
             </a>
-            <a class="is-icon" href="">
+            <a class="is-icon" href="javascript:alert('Add me Sakul6499#7237! :)');javascript:alert('Add me Sakul6499#7237! :)');">
               <img src="icons/discord.svg" alt="Discord" />
             </a>
-            <a class="is-icon" href="">
+            <a class="is-icon" href="https://twitter.com/Sakul6499">
               <img src="icons/twitter.svg" alt="Twitter" />
             </a>
-            <a class="is-icon" href="">
+            <a class="is-icon" href="https://mastodon.social/web/accounts/409956">
               <img src="icons/mastodon.svg" alt="Mastodon" />
             </a>
-            <a class="is-icon" href="">
+            <a class="is-icon" href="https://blog.sakul6499.de">
               <img src="icons/blog.svg" alt="Blog" />
             </a>
           </div>
@@ -84,16 +87,16 @@
             <article class="tile is-child notification is-danger">
               <p class="title">Projects</p>
               <div class="subtitle no-font">
-                <a class="is-icon-small" href="">
+                <a class="is-icon-small" href="https://gitlab.com/Sakul6499">
                   <img src="icons/gitlab.svg" alt="GitLab" />
                 </a>
-                <a class="is-icon-small" href="">
+                <a class="is-icon-small" href="https://github.com/Sakul6499">
                   <img src="icons/github.svg" alt="GitHub" />
                 </a>
-                <a class="is-icon-small" href="">
+                <a class="is-icon-small" href="https://bitbucket.org/%7Be556a531-5d5f-4ab9-a76d-bfc3043af83f%7D/">
                   <img src="icons/bitbucket.svg" alt="BitBucket" />
                 </a>
-                <a class="is-icon-small" href="">
+                <a class="is-icon-small" href="https://blog.sakul6499.de">
                   <img src="icons/blog.svg" alt="Blog" />
                 </a>
               </div>
@@ -121,16 +124,16 @@
                 <div class="content">
                   <p class="title">Contact me</p>
                   <div class="subtitle no-font">
-                    <a class="is-icon-small" href="">
+                    <a class="is-icon-small" href="https://t.me/sakul6499">
                       <img src="icons/telegram.svg" alt="Telegram" />
                     </a>
-                    <a class="is-icon-small" href="">
+                    <a class="is-icon-small" href="javascript:alert('Add me Sakul6499#7237! :)');">
                       <img src="icons/discord.svg" alt="Discord" />
                     </a>
-                    <a class="is-icon-small" href="">
+                    <a class="is-icon-small" href="https://keybase.io/sakul6499">
                       <img src="icons/keybase.svg" alt="Keybase" />
                     </a>
-                    <a class="is-icon-small" href="">
+                    <a class="is-icon-small" href="mailto:me@sakul6499.de">
                       <img src="icons/mail.svg" alt="Mail" />
                     </a>
                   </div>
@@ -159,22 +162,22 @@
             <div class="content">
               <p class="title">Social Media</p>
               <div class="subtitle no-font">
-                <a class="is-icon-small" href="">
+                <a class="is-icon-small" href="https://twitter.com/Sakul6499">
                   <img src="icons/twitter.svg" alt="Twitter" />
                 </a>
-                <a class="is-icon-small" href="">
+                <a class="is-icon-small" href="https://mastodon.social/web/accounts/409956">
                   <img src="icons/mastodon.svg" alt="Mastodon" />
                 </a>
-                <a class="is-icon-small" href="">
+                <a class="is-icon-small" href="https://keybase.io/sakul6499">
                   <img src="icons/keybase.svg" alt="Keybase" />
                 </a>
-                <a class="is-icon-small" href="">
+                <a class="is-icon-small" href="https://stackoverflow.com/users/5326353/sakul6499">
                   <img src="icons/stackoverflow.svg" alt="StackOverflow" />
                 </a>
-                <a class="is-icon-small" href="">
+                <a class="is-icon-small" href="https://www.linkedin.com/in/lukas-weber-b1a25515a">
                   <img src="icons/linkedin.svg" alt="LinkedIn" />
                 </a>
-                <a class="is-icon-small" href="">
+                <a class="is-icon-small" href="https://www.xing.com/profile/Lukas_Weber165">
                   <img src="icons/xing.svg" alt="Xing" />
                 </a>
               </div>
