--- a/footer.html
+++ b/footer.html
@@ -18,14 +18,15 @@
               </strong>
             </p>
             <p>
-                <strong class="has-text-weight-semibold">
-                  <a href="/disclaimer_legal_and_privacy.html">Disclaimer, legal and privacy</a>
-                </strong>
-              </p>
+              <strong class="has-text-weight-semibold">
+                <a href="/disclaimer_legal_and_privacy.html">
+                  Disclaimer, legal and privacy
+                </a>
+              </strong>
+            </p>
             <p>
               <small>
-                Source code licensed
-                <a href="http://opensource.org/licenses/mit-license.php">MIT</a>
+                <a href="https://gitlab.com/sakul6499.de/sakul6499.de">Source code</a> made with &hearts; and licensed under <a href="http://opensource.org/licenses/mit-license.php">MIT</a>
               </small>
             </p>
             <p style="margin-top: 1rem;">
