--- a/index.html
+++ b/index.html
@@ -81,41 +81,48 @@
                 <u class="is-half is-family-code has-text-underlined">Skills</u>
 
                 <h1 class="is-size-5 has-text-black">Languages I speak:</h1>
-                <div class="columns is-mobile is-centered">
-                    <section class="column is-half tags">
-                        <a href="/skills#JVM" class="tag is-white is-large">Java</a>
-                        <a href="/skills#CPP" class="tag is-white is-large">C/C++</a>
-                        <a href="/skills#WEB" class="tag is-white is-large">WEB</a>
-                        <a href="/skills#Rust" class="tag is-white is-medium">Rust</a>
-                        <a href="/skills#Rust" class="tag is-white is-medium">LaTeX</a>
-                        <a href="/skills#JVM" class="tag is-white is-small">Kotlin</a>
-                        <a href="/skills#JVM" class="tag is-white is-small">Groovy</a>
-                        <a href="/skills#WEB" class="tag is-white is-small">HTML5</a>
-                        <a href="/skills#WEB" class="tag is-white is-small">CSS4</a>
-                        <a href="/skills#WEB" class="tag is-white is-small">JS9</a>
-                        <a href="/skills#Other-Languages" class="tag is-white is-small">Ruby</a>
-                        <a href="/skills#Other-Languages" class="tag is-white is-small">(*)SH</a>
-                        <a href="/skills#Other-Languages" class="tag is-white is-small">Python</a>
-                    </section>
-                </div>
+                <section class="column is-mobile is-centered tags">
+                    <a href="/skills#JVM" class="tag is-white is-large">Java</a>
+                    <a href="/skills#Native" class="tag is-white is-large">C/C++</a>
+                    <a href="/skills#Web" class="tag is-white is-large">WEB</a>
+                    <a href="/skills#Rust" class="tag is-white is-medium">Rust</a>
+                    <a href="/skills#Rust" class="tag is-white is-medium">LaTeX</a>
+                    <a href="/skills#JVM" class="tag is-white is-small">Kotlin</a>
+                    <a href="/skills#JVM" class="tag is-white is-small">Groovy</a>
+                    <a href="/skills#Native" class="tag is-white is-small">CMake</a>
+                    <a href="/skills#Web" class="tag is-white is-small">HTML5</a>
+                    <a href="/skills#Web" class="tag is-white is-small">CSS4</a>
+                    <a href="/skills#Web" class="tag is-white is-small">JS9</a>
+                    <a href="/skills#Other-Languages" class="tag is-white is-small">Ruby</a>
+                    <a href="/skills#Other-Languages" class="tag is-white is-small">(*)SH</a>
+                    <a href="/skills#Other-Languages" class="tag is-white is-small">Python</a>
+                    <a href="/skills#Modelling" class="tag is-white is-small">UML</a>
+                    <a href="/skills#Modelling" class="tag is-white is-small">Graphviz/Dot</a>
+                </section>
 
                 <h1 class="is-size-5 has-text-black">Tools I use:</h1>
-                <div class="columns is-mobile is-centered">
-                    <section class="column is-half tags">
-                        <a href="/skills#VCS" class="tag is-white is-large">Git</a>
-                        <a href="/skills#IDEs-and-Editor" class="tag is-white is-large">VIM</a>
-                        <a href="/skills#IDEs-and-Editor" class="tag is-white is-large">VSCode</a>
-                        <a href="/skills#IDEs-and-Editor" class="tag is-white is-large">JetBrains</a>
-                        <a href="/skills#IDEs-and-Editor" class="tag is-white is-medium">NetBeans</a>
-                        <a href="/skills#IDEs-and-Editor" class="tag is-white is-large">IntelliJ</a>
-                        <a href="/skills#IDEs-and-Editor" class="tag is-white is-large">CLion</a>
-                        <a href="/skills#IDEs-and-Editor" class="tag is-white is-large">DataGrip</a>
-                        <a href="/skills#IDEs-and-Editor" class="tag is-white is-small">WebStorm</a>
-                        <a href="/skills#IDEs-and-Editor" class="tag is-white is-small">PHPStorm</a>
-                        <a href="/skills#IDEs-and-Editor" class="tag is-white is-small">PyCharm</a>
-                        <a href="/skills#IDEs-and-Editor" class="tag is-white is-small">Rider</a>
-                    </section>
-                </div>
+                <section class="column is-mobile is-centered tags">
+                    <a href="/skills#VCS" class="tag is-white is-large">Git</a>
+                    <a href="/skills#IDEs-and-Editor" class="tag is-white is-large">VIM</a>
+                    <a href="/skills#IDEs-and-Editor" class="tag is-white is-large">VSCode</a>
+                    <a href="/skills#IDEs-and-Editor" class="tag is-white is-large">JetBrains</a>
+                    <a href="/skills#IDEs-and-Editor" class="tag is-white is-medium">NetBeans</a>
+                    <a href="/skills#IDEs-and-Editor" class="tag is-white is-large">IntelliJ IDEA</a>
+                    <a href="/skills#IDEs-and-Editor" class="tag is-white is-large">CLion</a>
+                    <a href="/skills#IDEs-and-Editor" class="tag is-white is-large">DataGrip</a>
+                    <a href="/skills#IDEs-and-Editor" class="tag is-white is-small">WebStorm</a>
+                    <a href="/skills#IDEs-and-Editor" class="tag is-white is-small">PHPStorm</a>
+                    <a href="/skills#IDEs-and-Editor" class="tag is-white is-small">PyCharm</a>
+                    <a href="/skills#IDEs-and-Editor" class="tag is-white is-small">Rider</a>
+                    <a href="/skills#IDEs-and-Editor" class="tag is-white is-medium">VisualStudio</a>
+                    <a href="/skills#VCS" class="tag is-white is-small">SVN</a>
+                    <a href="/skills#IDEs-and-Editor" class="tag is-white is-small">Emacs</a>
+                    <a href="/skills#IDEs-and-Editor" class="tag is-white is-small">Brackets</a>
+                    <a href="/skills#Modelling" class="tag is-white is-small">VisualParadigm</a>
+                    <a href="/skills#Modelling" class="tag is-white is-small">UMLet</a>
+                    <a href="/skills#Modelling" class="tag is-white is-small">Draw.io</a>
+                    <a href="/skills#Web" class="tag is-white is-small">NodeJS</a>
+                </section>
 
                 <a href="/skills.html" class="has-text-grey">And much more ...</a>
             </div>
