WIP: Google Analytics

--- a/index.html
+++ b/index.html
@@ -233,7 +233,22 @@
         </div>
     </section>
     <embed src="footer.html" />
+
+    <!-- Dots.JS for animating the main page -->
     <script type="text/javascript" src="lib/dots.js"></script>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-135429793-3"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+
+        function gtag() {
+            dataLayer.push(arguments);
+        }
+        gtag('js', new Date());
+
+        gtag('config', 'UA-135429793-3');
+    </script>
+
 </body>
 
 </html>
