--- a/index.html
+++ b/index.html
@@ -82,49 +82,101 @@
 
                 <h1 class="is-size-5 has-text-black">Languages I speak:</h1>
                 <section class="column is-mobile is-centered tags">
-                    <a href="/skills#JVM" class="tag is-white is-large">Java</a>
-                    <a href="/skills#Native" class="tag is-white is-large">C/C++</a>
-                    <a href="/skills#Web" class="tag is-white is-large">WEB</a>
-                    <a href="/skills#Rust" class="tag is-white is-medium">Rust</a>
-                    <a href="/skills#Rust" class="tag is-white is-medium">LaTeX</a>
-                    <a href="/skills#JVM" class="tag is-white is-small">Kotlin</a>
-                    <a href="/skills#JVM" class="tag is-white is-small">Groovy</a>
-                    <a href="/skills#Native" class="tag is-white is-small">CMake</a>
-                    <a href="/skills#Web" class="tag is-white is-small">HTML5</a>
-                    <a href="/skills#Web" class="tag is-white is-small">CSS4</a>
-                    <a href="/skills#Web" class="tag is-white is-small">JS9</a>
-                    <a href="/skills#Other-Languages" class="tag is-white is-small">Ruby</a>
-                    <a href="/skills#Other-Languages" class="tag is-white is-small">(*)SH</a>
-                    <a href="/skills#Other-Languages" class="tag is-white is-small">Python</a>
-                    <a href="/skills#Modelling" class="tag is-white is-small">UML</a>
-                    <a href="/skills#Modelling" class="tag is-white is-small">Graphviz/Dot</a>
+                    <a href="/skills#Languages" class="tag is-success is-large">German</a>
+                    <a href="/skills#Languages" class="tag is-success is-large">English</a>
+                    <a href="/skills#JVM-and-similar" class="tag is-info is-large">Java</a>
+                    <a href="/skills#Native" class="tag is-info is-large">C/C++</a>
+                    <a href="/skills#Web" class="tag is-link is-large">WEB</a>
+                    <a href="/skills#Rust" class="tag is-info is-medium">Rust</a>
+                    <a href="/skills#Office" class="tag is-dark is-medium">LaTeX</a>
+                    <a href="/skills#JVM-and-similar" class="tag is-info is-small">Kotlin</a>
+                    <a href="/skills#JVM-and-similar" class="tag is-info is-small">Groovy</a>
+                    <a href="/skills#Native" class="tag is-warning is-small">CMake</a>
+                    <a href="/skills#Web" class="tag is-link is-small">HTML5</a>
+                    <a href="/skills#Web" class="tag is-link is-small">CSS4</a>
+                    <a href="/skills#Web" class="tag is-link is-small">JS9</a>
+                    <a href="/skills#Web" class="tag is-link is-small">PHP</a>
+                    <a href="/skills#Other-Languages" class="tag is-link is-small">Ruby</a>
+                    <a href="/skills#Other-Languages" class="tag is-warning is-small">(*)SH</a>
+                    <a href="/skills#Other-Languages" class="tag is-warning is-small">Python</a>
+                    <a href="/skills#Modelling" class="tag is-warning is-small">UML</a>
+                    <a href="/skills#Modelling" class="tag is-warning is-small">Graphviz/Dot</a>
+                    <a href="/skills#Native" class="tag is-warning is-small">Make</a>
+                    <a href="/skills#Languages" class="tag is-success is-small">Dutch</a>
+                    <a href="/skills#Languages" class="tag is-success is-small">Japanese</a>
+                    <a href="/skills#JVM-and-similar" class="tag is-info is-small">C#</a>
+                    <a href="/skills#JVM-and-similar" class="tag is-info is-small">F#</a>
+                    <a href="/skills#JVM-and-similar" class="tag is-info is-small">VB</a>
+                    <a href="/skills#Native" class="tag is-info is-small">[N]ASM</a>
                 </section>
 
                 <h1 class="is-size-5 has-text-black">Tools I use:</h1>
                 <section class="column is-mobile is-centered tags">
-                    <a href="/skills#VCS" class="tag is-white is-large">Git</a>
-                    <a href="/skills#IDEs-and-Editor" class="tag is-white is-large">VIM</a>
-                    <a href="/skills#IDEs-and-Editor" class="tag is-white is-large">VSCode</a>
-                    <a href="/skills#IDEs-and-Editor" class="tag is-white is-large">JetBrains</a>
-                    <a href="/skills#IDEs-and-Editor" class="tag is-white is-medium">NetBeans</a>
-                    <a href="/skills#IDEs-and-Editor" class="tag is-white is-large">IntelliJ IDEA</a>
-                    <a href="/skills#IDEs-and-Editor" class="tag is-white is-large">CLion</a>
-                    <a href="/skills#IDEs-and-Editor" class="tag is-white is-large">DataGrip</a>
-                    <a href="/skills#IDEs-and-Editor" class="tag is-white is-small">WebStorm</a>
-                    <a href="/skills#IDEs-and-Editor" class="tag is-white is-small">PHPStorm</a>
-                    <a href="/skills#IDEs-and-Editor" class="tag is-white is-small">PyCharm</a>
-                    <a href="/skills#IDEs-and-Editor" class="tag is-white is-small">Rider</a>
-                    <a href="/skills#IDEs-and-Editor" class="tag is-white is-medium">VisualStudio</a>
-                    <a href="/skills#VCS" class="tag is-white is-small">SVN</a>
-                    <a href="/skills#IDEs-and-Editor" class="tag is-white is-small">Emacs</a>
-                    <a href="/skills#IDEs-and-Editor" class="tag is-white is-small">Brackets</a>
-                    <a href="/skills#Modelling" class="tag is-white is-small">VisualParadigm</a>
-                    <a href="/skills#Modelling" class="tag is-white is-small">UMLet</a>
-                    <a href="/skills#Modelling" class="tag is-white is-small">Draw.io</a>
-                    <a href="/skills#Web" class="tag is-white is-small">NodeJS</a>
+                    <a href="/skills#VCS" class="tag is-success is-large">Git</a>
+                    <a href="/skills#IDEs-and-Editor" class="tag is-info is-large">VIM</a>
+                    <a href="/skills#IDEs-and-Editor" class="tag is-info is-large">VSCode</a>
+                    <a href="/skills#IDEs-and-Editor" class="tag is-link is-large">JetBrains IDEs</a>
+                    <a href="/skills#IDEs-and-Editor" class="tag is-info is-medium">NetBeans</a>
+                    <a href="/skills#IDEs-and-Editor" class="tag is-link is-large" id="hover-indicator">IntelliJ IDEA</a>
+                    <a href="/skills#IDEs-and-Editor" class="tag is-link is-large hover-affected">CLion</a>
+                    <a href="/skills#IDEs-and-Editor" class="tag is-link is-large hover-affected">DataGrip</a>
+                    <a href="/skills#IDEs-and-Editor" class="tag is-link is-small hover-affected">WebStorm</a>
+                    <a href="/skills#IDEs-and-Editor" class="tag is-link is-small hover-affected">PHPStorm</a>
+                    <a href="/skills#IDEs-and-Editor" class="tag is-link is-small hover-affected">PyCharm</a>
+                    <a href="/skills#IDEs-and-Editor" class="tag is-link is-small hover-affected">Rider</a>
+                    <a href="/skills#IDEs-and-Editor" class="tag is-info is-medium">VisualStudio</a>
+                    <a href="/skills#VCS" class="tag is-success is-small">SVN</a>
+                    <a href="/skills#IDEs-and-Editor" class="tag is-info is-small">Emacs</a>
+                    <a href="/skills#IDEs-and-Editor" class="tag is-info is-small">Brackets</a>
+                    <a href="/skills#IDEs-and-Editor" class="tag is-info is-small">Sublime Text</a>
+                    <a href="/skills#IDEs-and-Editor" class="tag is-info is-small">Atom.io</a>
+                    <a href="/skills#Modelling" class="tag is-danger is-small">VisualParadigm</a>
+                    <a href="/skills#Modelling" class="tag is-danger is-small">UMLet</a>
+                    <a href="/skills#Modelling" class="tag is-danger is-small">Draw.io</a>
+                    <a href="/skills#Web" class="tag is-dark is-medium">NodeJS</a>
+                    <a href="/skills#Linux" class="tag is-dark is-medium">AUR</a>
+                    <a href="/skills#Office" class="tag is-warning is-medium">MS office</a>
+                    <a href="/skills#Office" class="tag is-warning is-medium">Libre/OpenOffice</a>
+                    <a href="/skills#Virtualisation" class="tag is-white is-medium">Docker</a>
+                    <a href="/skills#Virtualisation" class="tag is-white is-medium">Vagrant</a>
+                    <a href="/skills#Virtualisation" class="tag is-white is-medium">VirtualBox</a>
+                    <a href="/skills#Virtualisation" class="tag is-white is-medium">VMWare Workstation/ESXi</a>
+                    <a href="/skills#Virtualisation" class="tag is-white is-medium">libVirt</a>
+                    <a href="/skills#IDEs-and-Editor" class="tag is-info is-small">Qt</a>
                 </section>
 
-                <a href="/skills.html" class="has-text-grey">And much more ...</a>
+                <h1 class="is-size-5 has-text-black">Frameworks I am familiar with:</h1>
+                <section class="column is-mobile is-centered tags">
+                    <a href="/skills#Test-Driven-Development" class="tag is-info is-medium">JUnit</a>
+                    <a href="/skills#Test-Driven-Development" class="tag is-info is-medium">Mockito</a>
+                    <a href="/skills#Test-Driven-Development" class="tag is-info is-medium">RestAssured</a>
+                    <a href="/skills#Test-Driven-Development" class="tag is-success is-medium">gTest</a>
+                    <a href="/skills#Web" class="tag is-warning is-medium">Bulma</a>
+                    <a href="/skills#Web" class="tag is-warning is-medium">Bootstrap</a>
+                    <a href="/skills#Web" class="tag is-info is-medium">Spring</a>
+                </section>
+
+                <h1 class="is-size-5 has-text-black">Operating Systems I work on:</h1>
+                <section class="column is-mobile is-centered tags">
+                    <a href="/skills#Linux" class="tag is-link is-large">Linux</a>
+                    <a href="/skills#Linux" class="tag is-link is-large">ArchLinux</a>
+                    <a href="/skills#Linux" class="tag is-link is-large">Manjaro</a>
+                    <a href="/skills#Hacking" class="tag is-danger is-small">ParrotOS</a>
+                    <a href="/skills#Hacking" class="tag is-danger is-small">KaliLinux</a>
+                    <a href="/skills#Linux" class="tag is-link is-small">Ubuntu</a>
+                    <a href="/skills#Other-Systems" class="tag is-warning is-medium">Windows</a>
+                    <a href="/skills#Other-Systems" class="tag is-warning is-small">Mac OSx</a>
+                </section>
+
+                <h1 class="is-size-5 has-text-black">Other topics I am interested in:</h1>
+                <section class="column is-mobile is-centered tags">
+                    <a href="/skills#Hacking" class="tag is-danger is-large">Hacking</a>
+                    <a href="/skills#IoT" class="tag is-success is-large">IoT</a>
+                    <a href="/skills#Graphics" class="tag is-info is-large">Game Design</a>
+                    <a href="/skills#Graphics" class="tag is-info is-large">3D Modelling</a>
+                </section>
+
+                <a href="/skills" class="has-text-grey">And much more ...</a>
             </div>
         </div>
     </section>
